Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,9 +70,9 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure Web App Deploy: myprep'
             inputs:
-              azureSubscription: $(azureSubscription)
+              azureSubscription: 'Azure subscription 1 (b0f53ad6-7dd8-4b1d-ba55-234f90a2a54c)'
               appType: 'webAppLinux'
-              appName: $(webAppName)
+              appName: 'myprep'
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
               runtimeStack: 'NODE|18-lts'
               startUpCommand: 'npm run start'
