--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 variables:
 
-  # Azure Resource Manager connection created during pipeline creation
+  # Azure Resource Manager connection created during pipeline creation - 12/21/22
   azureSubscription: $(AZ_SUBSCRIPTION)
 
   # Web app name
